FahMon: The Folding@home client monitoring program

v2.3.99 (03/04/09)

    General

      GUI

      * Fixed total PPD value not updating unless a client is clicked.
      * Allow about and benchmark dialogs to be closed with escape key (thanks
        to smartcat99s).
      * Added columns for client type (determined from the core type) and core
        version number.
      * Main progress bar now hides along with the WU Info panel.
      * Total PPD display moved into the status bar.
      * Improved sorting of inaccessible or disabled clients.
      * Removed "zebra" background colour scheme from benchmarks list.
      * Added IRC channel link to help menu and First Time Dialog.
      * Removed info panel from default view, and replaced with extra columns.
      * Added informative tooltips to a number of controls.
      * Window stays maximised after hiding the FAHlog if it was maximised
        initially.

      Monitoring

      * Improved handling of clients within Virtual Machines.
      * Prevented FahMon from crashing when the FAH client produces excessively
        large unitinfo.txt files.
      * Fixed miscalculation of frame count when step count is a non-standard
        number.
      * Limited FAHlog parsing to last 16KiB.
      * Added ability to reload client in series rather than launching a thread
        for each client. Will improve memory usage with large numbers of
        clients.
      * Significantly reduced CPU usage while reloading.
      * Added support for monitoring clients over http.
      * Added limited support for monitoring clients over ftp.
      * Added slower, configurable timer for reloading http/ftp clients. This is
        also used for web output.
      * Added support for saving web output to an ftp server.
      * Added support for additional cores.
      * Web output is now sorted in the same way as the client list.

      Other

      * Added crash reporter to help debugging.