@@ -1,5 +1,14 @@
 FahMon: The Folding@home client monitoring program
 
+SVN
+
+    General
+
+      Monitoring
+
+      * Added more rigorous checks to file handling to ensure that invalid file
+        access attempts don't crash FahMon (particularly on Windows).
+
 v2.3.99 (03/04/09)
 
     General
